[gd_scene load_steps=8 format=3 uid="uid://c5gwrdgwrhwrl"]

[ext_resource type="Script" uid="uid://dbg72p7mnh8l" path="res://control.gd" id="1_uhqqe"]

[sub_resource type="Animation" id="Animation_uhqqe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Aura:omni_attenuation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.492]
}

[sub_resource type="Animation" id="Animation_6adnx"]
resource_name = "pulse"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Aura:omni_attenuation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.966667),
"transitions": PackedFloat32Array(1.5, 1.5, 1.5),
"update": 0,
"values": [3.0, 2.0, 3.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhqqe"]
_data = {
&"RESET": SubResource("Animation_uhqqe"),
&"pulse": SubResource("Animation_6adnx")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6adnx"]
albedo_color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[sub_resource type="BoxMesh" id="BoxMesh_uhqqe"]
material = SubResource("StandardMaterial3D_6adnx")
size = Vector3(12, 0.5, 12)

[sub_resource type="Environment" id="Environment_6adnx"]
volumetric_fog_enabled = true
volumetric_fog_density = 0.0192

[node name="Node3D" type="Node3D"]

[node name="HUD" type="Node" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 650.0
script = ExtResource("1_uhqqe")

[node name="Red" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 18.0
offset_top = 253.0
offset_right = 56.0
offset_bottom = 284.0
text = "Red"

[node name="Blue" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 18.0
offset_top = 297.0
offset_right = 61.0
offset_bottom = 328.0
text = "Blue"

[node name="Green" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 18.0
offset_top = 338.0
offset_right = 74.0
offset_bottom = 369.0
text = "Green"

[node name="White" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 18.0
offset_top = 384.0
offset_right = 74.0
offset_bottom = 415.0
text = "White"

[node name="Clear" type="Button" parent="HUD/Control"]
layout_mode = 0
offset_left = 18.0
offset_top = 450.0
offset_right = 74.0
offset_bottom = 481.0
text = "Clear"

[node name="Panel" type="Panel" parent="HUD/Control"]
layout_mode = 0
offset_left = 12.0
offset_top = 521.0
offset_right = 323.0
offset_bottom = 588.0

[node name="Label" type="Label" parent="HUD/Control/Panel"]
layout_mode = 0
offset_left = 17.0
offset_right = 132.0
offset_bottom = 23.0
text = "Mixed Colours:"

[node name="MixLabel" type="Label" parent="HUD/Control/Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 31.0
offset_right = 297.0
offset_bottom = 58.0

[node name="Light" type="Node" parent="."]

[node name="Aura" type="OmniLight3D" parent="Light"]
transform = Transform3D(1, 0, 0, 0, 0.997582, 0.0694953, 0, -0.0694953, 0.997582, 0, 1.37404, -4.03096)
light_energy = 16.0
light_volumetric_fog_energy = 16.0
light_specular = 16.0
omni_range = 1.0
omni_attenuation = 5.492

[node name="AnimationPlayer" type="AnimationPlayer" parent="Light"]
libraries = {
&"": SubResource("AnimationLibrary_uhqqe")
}
autoplay = "pulse"
speed_scale = 0.1

[node name="Room" type="Node" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room"]
mesh = SubResource("BoxMesh_uhqqe")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -5.64952)
mesh = SubResource("BoxMesh_uhqqe")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 5.38843)
mesh = SubResource("BoxMesh_uhqqe")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Room"]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -5.47155, 0, 0.59145)
mesh = SubResource("BoxMesh_uhqqe")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Room"]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 5.47155, 0, -0.85254)
mesh = SubResource("BoxMesh_uhqqe")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.84547, 0)
mesh = SubResource("BoxMesh_uhqqe")
skeleton = NodePath("../..")
metadata/_edit_lock_ = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35774, -1.95884)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6adnx")

[connection signal="pressed" from="HUD/Control/Red" to="HUD/Control" method="_on_red_pressed"]
[connection signal="pressed" from="HUD/Control/Blue" to="HUD/Control" method="_on_blue_pressed"]
[connection signal="pressed" from="HUD/Control/Green" to="HUD/Control" method="_on_green_pressed"]
[connection signal="pressed" from="HUD/Control/White" to="HUD/Control" method="_on_white_pressed"]
[connection signal="pressed" from="HUD/Control/Clear" to="HUD/Control" method="_on_clear_pressed"]
